include/vokra.h

// Status code returned by the fallible Vokra C functions (ADR-0003 §3-d).
//
// `VOKRA_OK` is 0; every error is a distinct non-zero code mirroring a
// `VokraError` variant, plus `VOKRA_ERROR_PANIC` for a Rust panic caught at
// the FFI boundary and `VOKRA_ERROR_OTHER` for any future `#[non_exhaustive]`
// variant. The numeric values are part of the (M0-unstable) ABI.
typedef enum vokra_status_t {
    // Success.
    VOKRA_OK = 0,
    // I/O failure (file open / read / metadata). Maps `VokraError::Io`.
    VOKRA_ERROR_IO = 1,
    // A model file could not be loaded or parsed. Maps `VokraError::ModelLoad`.
    VOKRA_ERROR_MODEL_LOAD = 2,
    // The selected backend does not support an op. Maps `VokraError::UnsupportedOp`.
    VOKRA_ERROR_UNSUPPORTED_OP = 3,
    // The requested backend is unavailable. Maps `VokraError::BackendUnavailable`.
    VOKRA_ERROR_BACKEND_UNAVAILABLE = 4,
    // A caller-supplied argument is invalid (NULL, non-UTF-8, wrong rate, ...).
    // Maps `VokraError::InvalidArgument`.
    VOKRA_ERROR_INVALID_ARGUMENT = 5,
    // An audio graph failed validation. Maps `VokraError::GraphValidation`.
    VOKRA_ERROR_GRAPH_VALIDATION = 6,
    // The requested capability is not wired for this model/task (e.g. calling
    // TTS on an ASR model). Maps `VokraError::NotImplemented`.
    VOKRA_ERROR_NOT_IMPLEMENTED = 7,
    // A Rust panic was caught at the FFI boundary (never propagated across it).
    VOKRA_ERROR_PANIC = 8,
    // Any other / future error variant.
    VOKRA_ERROR_OTHER = 9,
} vokra_status_t;
// Opaque session handle: one loaded model bound to one backend, with the
// matching native engine injected (ASR / TTS / VAD — see
// `crate::session::vokra_session_create_from_file`).
//
// Created by `vokra_session_create_from_file`, cloned by
// `vokra_session_retain` (atomic ref count, FR-API-03) and released by
// `vokra_session_destroy`. The loaded model stays alive until the last handle
// is destroyed. Backed by `Session: Send + Sync`, so a handle is safe to share
// across C threads. Opaque to C.
typedef struct vokra_session_t vokra_session_t;
// Opaque streaming handle: a native stepping [`Stream`] (M1-08) whose events
// flow through a lock-free ring, drained by `vokra_stream_poll` (VAD speech
// probabilities) or `vokra_stream_poll_events` (typed events).
//
// Created by `vokra_stream_open`, released by `vokra_stream_destroy`. Opaque to
// C. All recurrent state (LSTM `h`/`c`, framing, KV cache) is hidden inside the
// stepper (FR-LD-06 / FR-ST-05).
typedef struct vokra_stream_t vokra_stream_t;
// Transcribes mono `f32` PCM to text using the session's ASR engine (FR-API-01).
//
// # Parameters
//
// - `session`: a session created from a Whisper GGUF.
// - `pcm` / `num_samples`: mono `f32` samples (may be empty). `pcm` may be
//   `NULL` only when `num_samples == 0`.
// - `sample_rate`: the PCM sample rate in Hz. It must equal the model's front
//   end sample rate — Vokra does not resample in M0 (FR-OP-04 is M1); a
//   mismatch is `VOKRA_ERROR_INVALID_ARGUMENT`.
// - `out_text_utf8`: on `VOKRA_OK`, receives a NUL-terminated UTF-8 transcript
//   to be freed with `vokra_string_free`. Untouched on error.
//
// # Safety
//
// `session` must be a valid session handle, `pcm` valid for `num_samples`
// reads (or `NULL` when `num_samples == 0`), and `out_text_utf8` a writable
// `char*` location.
enum vokra_status_t vokra_asr_transcribe(const struct vokra_session_t *session,
                                         const float *pcm,
                                         size_t num_samples,
                                         int32_t sample_rate,
                                         char **out_text_utf8);
// Frees a transcript returned by `vokra_asr_transcribe`. `NULL` is a no-op;
// double-free is undefined behaviour.
//
// # Safety
//
// `s` must be `NULL` or a pointer returned by `vokra_asr_transcribe` that has
// not already been freed.
void vokra_string_free(char *s);
// Returns the calling thread's last error message as a NUL-terminated UTF-8
// C string, or `NULL` if no error has been recorded on this thread.
//
// The returned pointer is owned by Vokra and stays valid until the next error
// is recorded **on the same thread**; do not free it and do not use it across
// threads. `vokra_last_error` itself never fails and never allocates
// (ADR-0003 §3-b).
const char *vokra_last_error(void);
// Loads a model from a GGUF file and creates an inference session on the CPU
// backend (FR-API-01).
//
// The architecture is detected from the GGUF's `vokra.model.arch` metadata and
// the matching native engine is injected: `whisper` → ASR, `silero-vad` → VAD,
// `piper-plus-mb-istft-vits2` → TTS. ONNX is never loaded (FR-LD-05).
//
// # Parameters
//
// - `path_utf8`: NUL-terminated UTF-8 path to the `.gguf` model file.
// - `out_session`: on `VOKRA_OK`, receives a new session handle to be freed
//   with `vokra_session_destroy`. Untouched on error.
//
// # Returns
//
// `VOKRA_OK`, or a non-zero status with the detail available from
// `vokra_last_error()` (missing file, unparsable GGUF, unknown arch, ...).
//
// # Safety
//
// `path_utf8` must be a valid NUL-terminated C string and `out_session` a
// valid, writable `vokra_session_t*` location.
enum vokra_status_t vokra_session_create_from_file(const char *path_utf8,
                                                   struct vokra_session_t **out_session);
// Frees a session handle from `vokra_session_create_from_file` /
// `vokra_session_retain`. `NULL` is a no-op; using the handle after this call
// is undefined behaviour. The model is freed when the last handle is destroyed.
//
// # Safety
//
// `session` must be `NULL` or a handle from `vokra_session_create_from_file`
// or `vokra_session_retain` that has not already been destroyed.
void vokra_session_destroy(struct vokra_session_t *session);
// Returns the Vokra runtime version as a static NUL-terminated UTF-8 string
// (the `vokra-capi` crate version). The pointer is static — never free it.
const char *vokra_version(void);
// Opens a VAD stream over a session (FR-API-01 / FR-ST-02).
//
// # Parameters
//
// - `session`: a session created from a Silero VAD GGUF.
// - `sample_rate`: the stream sample rate in Hz (Silero accepts 8000 or
//   16000; other rates are rejected by the first `vokra_stream_push_pcm`).
// - `out_stream`: on `VOKRA_OK`, receives a stream handle freed with
//   `vokra_stream_destroy`. The stream retains the session, so it keeps the
//   model alive even after `vokra_session_destroy`.
//
// Returns `VOKRA_ERROR_NOT_IMPLEMENTED` if the session's model is not a VAD
// model (no VAD engine was injected).
//
// # Safety
//
// `session` must be a valid session handle and `out_stream` a writable
// `vokra_stream_t*` location.
enum vokra_status_t vokra_stream_open(const struct vokra_session_t *session,
                                      int32_t sample_rate,
                                      struct vokra_stream_t **out_stream);
// Pushes mono `f32` PCM into a VAD stream (FR-API-01). Each completed frame's
// event is enqueued on the stream's ring; drain them with `vokra_stream_poll`
// or `vokra_stream_poll_events`. A trailing partial frame is held internally.
//
// # Safety
//
// `stream` must be a valid stream handle and `pcm` valid for `num_samples`
// reads (or `NULL` when `num_samples == 0`).
enum vokra_status_t vokra_stream_push_pcm(struct vokra_stream_t *stream,
                                          const float *pcm,
                                          size_t num_samples);
// Drains up to `capacity` buffered speech probabilities into `out_probs`
// (FR-API-01). Non-blocking: writes `*out_count` = number written (0 if none
// pending). `out_probs` may be `NULL` only when `capacity == 0`.
//
// # Safety
//
// `stream` must be a valid stream handle, `out_probs` valid for `capacity`
// writes (or `NULL` when `capacity == 0`), and `out_count` a writable
// `size_t` location.
enum vokra_status_t vokra_stream_poll(struct vokra_stream_t *stream,
                                      float *out_probs,
                                      size_t capacity,
                                      size_t *out_count);
// Frees a stream handle from `vokra_stream_open`. `NULL` is a no-op.
//
// # Safety
//
// `stream` must be `NULL` or a handle from `vokra_stream_open` not already
// destroyed.
void vokra_stream_destroy(struct vokra_stream_t *stream);
// Synthesizes speech PCM from UTF-8 text using the session's TTS engine
// (FR-API-01, piper-plus native path).
//
// # Parameters
//
// - `session`: a session created from a piper-plus voice GGUF.
// - `text_utf8`: NUL-terminated UTF-8 text to synthesize.
// - `out_pcm`: on `VOKRA_OK`, receives a Vokra-owned mono `f32` buffer (values
//   in `[-1, 1]`) to be freed with `vokra_audio_free(*out_pcm, *out_num_samples)`.
// - `out_num_samples`: receives the sample count of `*out_pcm`.
// - `out_sample_rate`: receives the output sample rate in Hz.
//
// All three out-params are written only on `VOKRA_OK`.
//
// # Safety
//
// `session` must be a valid session handle, `text_utf8` a valid C string, and
// the three out-pointers writable locations of the matching type.
enum vokra_status_t vokra_tts_synthesize(const struct vokra_session_t *session,
                                         const char *text_utf8,
                                         float **out_pcm,
                                         size_t *out_num_samples,
                                         int32_t *out_sample_rate);
// Frees a PCM buffer returned by `vokra_tts_synthesize`. Pass the pointer and
// the sample count from the same call. `NULL` is a no-op; double-free is
// undefined behaviour.
//
// # Safety
//
// `pcm` must be `NULL`, or the `*out_pcm` from a `vokra_tts_synthesize` call
// with the matching `num_samples`, not already freed.
void vokra_audio_free(float *pcm, size_t num_samples);